--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,8 @@
 :root {
     --primary-font-family: 'Roboto', sans-serif;
     --secondary-font-family: 'Raleway', sans-serif;
-    /* --primary-text-color-theme-dark: 157, 164, 189;
-    --secondary-text-color-theme-dark: #ffffff;
-    --primary-text-color-theme-light: #555555;
-    --secondary-text-color-theme-light: #303030; */
+    --primary-text-color-theme-dark: #FFFFFF;
+    --primary-text-color-theme-light: #000000;
     --accent-color: #2196F3;
 }
 
@@ -39,7 +37,7 @@ body {
     font-size: 26px;
     line-height: 1.19;
     letter-spacing: 0.03em;
-    color: #000000;
+    color: var(--primary-text-color-theme-light)
 }
 
 .section-title {
@@ -87,7 +85,7 @@ body {
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    /* color: #FFFFFF; */
+    color: #FFFFFF;
 }
 
 .modal-btn {
@@ -108,6 +106,9 @@ body {
     background-color: #188CE8;
 }
 
+.hero {
+    background-color: #2F303A;
+}
 /* ==============/HERO============== */
 
 /* =============OUR MISSION============== */
@@ -156,6 +157,10 @@ body {
 
     color: #757575;
 }
+
+.our-team {
+    background-color: #F5F4FA;
+}
 /* =============/OUR TEAM============== */
 
 /* =============FOOTER============== */
@@ -165,7 +170,11 @@ body {
     line-height: 1.71;
     letter-spacing: 0.03em;
 
-    /* color: #FFFFFF; */
+    color: #FFFFFF;
+}
+
+.footer {
+    background-color: #2F303A;
 }
 /* =============/FOOTER============== */
 
