--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,10 @@ body {
 
     color: #212121;
 }
+
+.menu .link.current {
+    color: #2196F3;
+}
 /* ==============/COMPONENTS============== */
 /* ==============HEADER============== */
 
@@ -179,6 +183,15 @@ body {
 
 .footer {
     background-color: #2F303A;
+}
+
+.main-contact-link {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+
+    color: rgba(255, 255, 255, 0.6);
 }
 /* =============/FOOTER============== */
 
